--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -16,7 +16,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter:3.2.2'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.2'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'com.google.guava:guava:33.0.0-jre'
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
