--- a/settings.gradle
+++ b/settings.gradle
@@ -10,5 +10,6 @@ plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.7.0'
 }
 
-rootProject.name = 'worker'
-include('app')
+rootProject.name = 'distributed-systems'
+include('manager')
+include('worker')
