--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter:3.2.2'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.2.2'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation project(':lib')
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
