--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter:3.2.2'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.2.2'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'com.github.dpaukov:combinatoricslib3:3.3.3'
+    implementation 'commons-codec:commons-codec:1.16.1'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.2.2'
+
     implementation project(':lib')
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
