[lab1, manager, worker]: task sending from manager to worker, retry policy configured

--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -6,10 +6,10 @@ springdoc:
       /
 manager:
   patchHashCrack:
-    url:
+    path:
       /crack/request
   baseUrl:
-    localhost:8080/internal/api/manager/hash
+    http://localhost:8080/internal/api/manager/hash
 server:
   port:
     8081
