--- a/manager/src/main/resources/application.yml
+++ b/manager/src/main/resources/application.yml
@@ -10,9 +10,10 @@ alphabet:
   a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9
 workers:
   urls:
-    localhost:8081,
-  apiPrefix:
-    /internal/api/worker/hash
+    http://localhost:8081
+  postHashCrackTask:
+    path:
+      /internal/api/worker/hash/crack/task
 server:
   error:
     include-message:
