--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -21,7 +21,9 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.2.2'
-    
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.3'
+
+
     implementation project(':lib')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
