--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -12,6 +12,8 @@ repositories {
 
 dependencies {
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0-M1'
+    implementation 'org.springframework:spring-beans:6.1.5'
+
 
 }
 
