--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -22,9 +22,10 @@ dependencies {
     implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.2.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.3'
-
+    implementation 'org.springframework.boot:spring-boot-starter-amqp:3.2.4'
 
     implementation project(':lib')
+    implementation project(':rabbit')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
