--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -22,8 +22,10 @@ dependencies {
     implementation 'com.github.dpaukov:combinatoricslib3:3.3.3'
     implementation 'commons-codec:commons-codec:1.16.1'
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.2.2'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp:3.2.4'
 
     implementation project(':lib')
+    implementation project(':rabbit')
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
