--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -13,8 +13,8 @@ repositories {
 dependencies {
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0-M1'
     implementation 'org.springframework:spring-beans:6.1.5'
-
-
+    implementation 'org.springframework.data:spring-data-mongodb:4.2.4'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
 }
 
 group = 'ru.nsu.fit.g20203.sinyukov'
